--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,8 @@ services:
     hostname: api1
     environment:
       - APP_PORT=8080
-      - REDIS_URL=redis:6379
+      - REDIS_URL=redis://redis:6379/0
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/payments
       - PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
       - PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
       - INSTANCE_ID=API-1
@@ -35,6 +36,8 @@ services:
       - payment-processor
     depends_on:
       redis:
+        condition: service_healthy
+      postgres:
         condition: service_healthy
     deploy:
       resources:
@@ -47,7 +50,8 @@ services:
     hostname: api2
     environment:
       - APP_PORT=8080
-      - REDIS_URL=redis:6379
+      - REDIS_URL=redis://redis:6379/0
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/payments
       - PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
       - PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
       - INSTANCE_ID=API-2
@@ -69,9 +73,37 @@ services:
         limits:
           cpus: "0.25"
           memory: "275MB"
+          
+  postgres:
+    image: postgres:16-alpine
+    container_name: rinha-postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: payments
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./docker/postgres/init:/docker-entrypoint-initdb.d
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: "0.25"
+          memory: "200MB"
 
 networks:
   backend:
     driver: bridge
   payment-processor:
     external: true
+    
+volumes:
+  postgres_data:
