--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,10 @@ services:
           memory: "15MB"
 
   api1: &api
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: docker.io/taniguti/rinha-de-backend-2025:latest
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     hostname: api1
     environment:
       - APP_PORT=8080
