--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,10 +19,10 @@ services:
           memory: "15MB"
 
   api1: &api
-    image: docker.io/taniguti/rinha-de-backend-2025:latest
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
+    # image: docker.io/taniguti/rinha-de-backend-2025:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     hostname: api1
     environment:
       - APP_PORT=8080
@@ -31,7 +31,7 @@ services:
       - PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
       - PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
       - INSTANCE_ID=API-1
-      - WORKER_CONCURRENCY=16
+      - WORKER_CONCURRENCY=4
     networks:
       - backend
       - payment-processor
@@ -104,6 +104,3 @@ networks:
     driver: bridge
   payment-processor:
     external: true
-    
-volumes:
-  postgres_data:
